--- a/Android/EVSmartCharge2/app/src/main/res/layout/fragment_home_menu.xml
+++ b/Android/EVSmartCharge2/app/src/main/res/layout/fragment_home_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -23,15 +24,20 @@
         android:theme="@style/ThemeHoloDialog" />
 
     <SeekBar
+        android:id="@+id/charge_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/time_picker"
-        android:layout_marginTop="10dp"
-        android:id="@+id/charge_bar"
-        android:layout_alignRight="@+id/chargeRequest_text"
-        android:layout_alignEnd="@+id/chargeRequest_text"
+        android:layout_alignStart="@+id/chargeRequest_text"
         android:layout_alignLeft="@+id/chargeRequest_text"
-        android:layout_alignStart="@+id/chargeRequest_text" />
+        android:layout_alignEnd="@+id/chargeRequest_text"
+        android:layout_alignRight="@+id/chargeRequest_text"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp" />
+
 
     <TextView
         android:textSize="18sp"
